# QM_SSS_Lesson_Plan

./: .codecov.yml  .gitignore  .travis.yml  README.md  setup.py
handouts/: 01_SCF_Introduction.tex  02_SCF_DIIS.tex  03_JK_Algorithms.tex  04_SCF_Response.tex  05_MP2.tex  jrncodes.bib  konrad_references.bib  mainbib-ds.bib  references.bib
lawrap_tests/: CMakeLists.txt  test.c  test.cc
other/threading/: build  thread_test
quantum_python/: __init__.py  jk.py  mp2.py  rhf.py
quantum_python/core/: CMakeLists.txt  core.cc
tests/: test_mp2.py  test_rhf.py
